Add copy functions and list overloads